--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -25,10 +25,12 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  padding: 0;
+  display: grid;
   min-width: 320px;
   min-height: 100vh;
+  height: 100vh;
+  place-content: center;
 }
 
 h1 {
